Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-07-15 Kimmo
 Strip SuperComboBox strings before saving
  Src/Common: SuperComboBox.cpp

2006-07-14 WinMerge experimental release 2.5.5.3 (cvs)

2006-07-14 Kimmo
 BUG: [ 1521555 ] Location Pane - can't see current location because of color
  Use 3d-color instead of scrollbar color in location pane
  Src: LocationView.cpp
 PATCH: [ 1521696 ] Improve Text color option dialog
  Src: Merge.rc PropTextColors.cpp PropTextColors.h
  Src/Languages/*: Merge*.rc

2006-07-13 Kimmo
 PATCH: [ 1521352 ] Cleanup char constants for CRegExep
  Src/Common: RegExp.cpp
 PATCH: [ 1521392 ] Fix reading last line in linefilter file
  Src: FileFilterMgr.cpp
 BUG: [ 1498511 ] Conflict accelerator key in IDR_DIRVIEWMENU
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1517057 ] Option to Ignore Multiline Comments (bugfix + rename to filtering)
  Submitted by David Maisonave
  Src: DiffWrapper.cpp DiffWrapper.h DirDoc.cpp MainFrm.cpp Merge.rc MergeDoc.cpp
   OptionsDef.h OptionsInit.cpp PropCompare.cpp Propcompare.h resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1517057 ] Option to Ignore Multiline Comments (bugfix)
  Submitted by David Maisonave
  Src: DiffWrapper.cpp

2006-07-12 Kimmo
 PATCH: [ 1517057 ] Option to Ignore Multiline Comments
  Submitted by David Maisonave
  Src: DiffWrapper.cpp DiffWrapper.h DirDoc.cpp MainFrm.cpp Merge.rc MergeDoc.cpp
   OptionsDef.h OptionsInit.cpp PatchTool.cpp PropCompare.cpp Propcompare.h
   resource.h
  Src/Languages/*: Merge*.rc
 Add Ed_K and David Maisonave to Contributors
  Docs/Users: Contributors.txt
 Document UniMemFile::ReadString() function parameters and return values
  Src/Common: UniFile.cpp

2006-07-09 Kimmo
 Quiet warning about deprecated function for VS2003 and later
  Merge.cpp

2006-07-08 Kimmo
 PATCH: [ 1517362 ] Ensure diff is visible in location view
  Src: LocationView.cpp